package com.example.motoaku

object TestTags {
    internal const val TEST_SURFACE = "TestSurface"
    internal const val TEST_BUTTON = "TestButton"
    internal const val TEST_TEXT = "TestText"

    internal const val HOMESCREEN_SELECTEDMOTOCARD = "HomeScreenSelectedMotoCard"
    internal const val HOMESCREEN_CONTENTBUTTON_MOTO = "HomeScreenContentButtonMoto"
    internal const val HOMESCREEN_CONTENTBUTTON_FIX = "HomeScreenContentButtonFix"
    internal const val BOTTOMNAV_FAB = "BottomNavigationFAB"

    internal const val ADDFIX_INPUTCOSTPRICE = "AddFixInputCostPrice"
}